--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    // Temporary workaround as per https://issuetracker.google.com/issues/158060799
+    lintOptions {
+        checkReleaseBuilds false
+    }
 }
 
 flutter {
