--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
 
   cupertino_icons: ^1.0.0
   flutter_local_notifications: ^4.0.0
+  rxdart: ^0.25.0
+  timezone: ^0.6.1
 
 dev_dependencies:
   flutter_test:
